--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "dotenv": "^8.2.0",
         "express": "^4.16.4",
         "jsonwebtoken": "^8.5.1",
+        "lodash": "^4.17.15",
         "morgan": "^1.9.1",
         "oracledb": "^4.1.0",
         "winston": "^3.2.1"
