--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "lodash": "^4.17.15",
         "morgan": "^1.9.1",
         "oracledb": "^4.1.0",
+        "socket.io": "^2.3.0",
         "winston": "^3.2.1"
     }
 }
