--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "morgan": "^1.9.1",
         "oracledb": "^4.1.0",
         "socket.io": "^2.3.0",
+        "socket.io-redis": "^5.2.0",
         "winston": "^3.2.1"
     }
 }
